some bugfixes and cleanup of old code, datagen for enchantments and painting variants. the Lighter is broken. I need to make a custom Datacomponent for my containers. This push may add the assets because of the way the files generated